  doesn't exist) and which gets passed the (expanded) token sequence found 
  after the #include directive token.
- The file names passed to the preprocessing hooks are now normalised.
- Changed the opened_include_file() preprocessing hook to receive the correct
  relative path even if the included file was found in the current directory.
  
Mon Feb 21 09:30:04 WEST 2005
Version 1.1.14 (Fixes in response to the Boost review)

Wave was accepted into Boost! 

With special thanks to Tom Brinkman, who volunteered to be the review manager.

With thanks to David Abrahams, Beman Dewes, Reece Dunn, Larry Evans, 
Doug Gregor, Joel de Guzman, Baptiste Lepilleur, Andy Little, Paul Mensonides, 
Dan Nuffer, Andreas Pokorny, Vladimir Prus, Gennadiy Rozental, Michiel Salters, 
Jonathan Turkanis, Chris Uzdavinis, Pavel Vozenilek, Michael Walter for bug 
reports, fixes and hints.

- Added support for the MS extensions #region and #endregion, which simply get
  ignored by Wave. The support for these is enabled only, when the pp constant
  BOOST_WAVE_SUPPORT_MS_EXTENSIONS is defined. Otherwise these get flagged as 
  an illegal preprocessor directive (as before).
- Fixed a problem, where the replacement text for a #pragma directive got lost
  if this directive was on the last line of a processed (include-)file.
- Changed the default value for BOOST_WAVE_SUPPORT_MS_EXTENSIONS for non-
  Windows systems to zero.
- Updated outdated external links in the documentation.
- Fixed certain grammatical and stylistic quirks in the documentation.
- Fixed a problem in libs/wave/build/Jamfile.v2 (as reported by Larry Evans).
  Fixed the Jamfile.v2 in the samples directories accordingly.
- Added the '<toolset>vc-7_1:<rtti>off' to all Jamfile.v2 files to adjust for 
  the internal buffer overflow bug in the VC7.1 compiler (reported by Joel de 
  Guzman).
- Changed the '<toolset>vc-7_1:<rtti>off' to '<toolset>vc-7.1:<rtti>off' as
  required by the Boost.Build.v2 library (suggested by Vladimir Prus).